# pq-fastscan

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs  pqfs.rs
src/metric/: mod.rs  simd.rs  utils.rs
