[package]
name = "pq-fastscan"
version = "0.1.0"
edition = "2021"

[dependencies]
hdf5 = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
num = "0.4"
itertools = "0.10"

[features]
default = []
# Enable nightly features, including advanced SIMD
nightly = []
# Fallback implementation without SIMD
fallback = []

[build-dependencies]
cc = "1.0"
